--- a/css/style.css
+++ b/css/style.css
@@ -102,16 +102,43 @@ header {
   margin-right: 25px;
 }
 
-.header-slider {
+.slider-wrapper {
   padding-top: 78px;
   padding-bottom: 80px;
-  background-image: url(../img/nerds-index-slide1\ 1.png);
   background-position: right bottom;
   background-repeat: no-repeat;
+  position: relative;
+  display: none;
+}
+
+.slider-wrapper-1 {
+  background-image: url(../img/nerds-index-slide1\ 1.png);
+}
+
+.slider-wrapper-2 {
+  background-image: url("../img/nerds-index-slide2.png");
+}
+
+.slider-wrapper-3 {
+  background-image: url("../img/nerds-index-slide3.png");
+}
+
+.slider-active {
+  display: block;
+  animation: transitSlide 0.2s;
+}
+
+@keyframes transitSlide {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .header-slider-title {
-  max-width: 538px;
+  max-width: 523px;
   font-weight: 500;
   font-size: 55px;
   line-height: 55px;
@@ -120,11 +147,52 @@ header {
 }
 
 .header-slider-description {
-  max-width: 400px;
+  max-width: 410px;
   font-weight: normal;
   font-size: 16px;
   line-height: 24px;
   color: #283136;
+}
+
+.slider-controls {
+  position: absolute;
+  bottom: 97px;
+  left: 539px;
+  display: flex;
+}
+
+.slider-button {
+  padding: 0;
+  width: 17px;
+  height: 17px;
+  background-color: #fff;
+  border-radius: 50%;
+  cursor: pointer;
+  border: none;
+  margin-right: 17px;
+}
+
+.slider-button.active-slide-button::before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  width: 3px;
+  height: 3px;
+  background: transparent;
+  border: 2px solid #c1c1c1;
+  border-radius: 50%;
+}
+
+.first-button.active-slide-button::before {
+  left: 5px;
+}
+
+.second-button.active-slide-button::before {
+  left: 39px;
+}
+
+.third-button.active-slide-button::before {
+  left: 73px;
 }
 
 .header-title {
@@ -163,6 +231,11 @@ header {
 
 .header-button:hover {
   background: #e74246;
+}
+
+.header-button:active {
+  background: #d7373b;
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .products {
@@ -427,12 +500,24 @@ header {
 
 .our-address {
   background-image: url("../img/map.png");
-  max-height: 416px;
-  padding-top: 54px;
-  padding-bottom: 54px;
+  height: 416px;
+  position: relative;
+  display: flex;
+}
+
+.map-iframe {
+  min-width: 1200px;
+  width: 100%;
+  height: 416px;
+  padding: 0;
+  margin: 0;
+  z-index: 0;
+  position: absolute;
 }
 
 .address-block {
+  margin-top: 54px;
+  margin-bottom: 54px;
   width: 319px;
   height: 308px;
   background-color: #fff;
@@ -442,6 +527,7 @@ header {
   box-sizing: border-box;
   padding-left: 50px;
   position: relative;
+  z-index: 1;
 }
 
 .company-name {
@@ -481,6 +567,11 @@ header {
 
 .connect-button:hover {
   background: #e74246;
+}
+
+.connect-button:active {
+  background: #d7373b;
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .footer-contacts {
@@ -675,6 +766,7 @@ header {
 .filter-label {
   margin-left: 36px;
   position: relative;
+  cursor: pointer;
 }
 
 .radio-input + label::before {
@@ -864,16 +956,74 @@ header {
 
 .project-card {
   position: relative;
-  /* box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.25); */
   border-radius: 5px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-top-right-radius: 0;
   border-top-left-radius: 0;
+  height: 572px;
+  cursor: pointer;
 }
 
 .card-image {
   height: 100%;
   width: 358px;
+}
+
+.project-card:hover .card-info {
+  display: flex;
+}
+
+.project-card:hover::before {
+  opacity: 1;
+  box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.25);
+}
+
+.card-info {
+  position: absolute;
+  background: #eeeeee;
+  bottom: 0;
+  width: 100%;
+  height: 231px;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.card-title {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 30px;
+  text-transform: uppercase;
+  color: #000000;
+  margin: 0;
+  margin-bottom: 12px;
+}
+
+.card-description {
+  font-size: 16px;
+  line-height: 18px;
+  color: #666666;
+  margin: 0;
+  padding: 0;
+  max-width: 255px;
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.card-price {
+  width: 200px;
+  height: 50px;
+  background: #fb565a;
+}
+
+.card-price:hover {
+  background: #e74246;
+}
+
+.card-price:active {
+  background: #d7373b;
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .project-card::before {
@@ -928,13 +1078,145 @@ header {
   color: rgba(0, 0, 0, 0.3);
 }
 
-/* .modal-window {
-  position: absolute;
+.modal-window {
+  display: none;
+  position: fixed;
   max-width: 960px;
   height: 590px;
   background: #fff;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  padding-left: 100px;
+  padding-right: 100px;
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.4);
+  animation-name: modal-animation;
+  animation-timing-function: ease;
+  animation-duration: 0.7s;
+  z-index: 10;
 }
 
-.modal-window form {
+.modal-show {
+  display: block;
+}
+
+@keyframes modal-animation {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.form-wrapper {
+  width: 761px;
+}
+
+.form-header {
   display: flex;
-} */
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 63px;
+  margin-bottom: 37px;
+}
+
+.form-title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 45px;
+  line-height: 53px;
+  color: #000000;
+}
+
+.close-button {
+  width: 21px;
+  height: 21px;
+  position: relative;
+  border: none;
+  background-color: transparent;
+  background-image: url("../img/close-cross.svg");
+  opacity: 0.4;
+  cursor: pointer;
+}
+
+.close-button:hover {
+  opacity: 1;
+}
+
+.close-button:active {
+  opacity: 0.2;
+}
+
+.form-wrapper {
+  display: grid;
+  grid-template-rows: min-content min-content 1fr;
+  margin-bottom: 47px;
+}
+
+.row-1 {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 34px;
+}
+
+.form-label {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 18px;
+  color: #000000;
+  margin-bottom: 9px;
+  display: block;
+}
+
+.form-input {
+  background: transparent;
+  border: 2px solid #d7dcde;
+  box-sizing: border-box;
+  border-radius: 3px;
+  padding: 16px;
+  width: 360px;
+}
+
+.form-input:hover {
+  border: 2px solid #b4b9bb;
+}
+
+.form-input:focus::placeholder {
+  color: #444444;
+}
+
+.form-input:invalid {
+  border: 2px solid #e74246;
+  color: #e74246;
+}
+
+.form-input:invalid::placeholder {
+  color: #e74246;
+}
+
+.form-input.text-input {
+  width: 760px;
+  max-height: 118px;
+}
+
+.submit-form-button {
+  border: none;
+  width: 259px;
+  height: 50px;
+  color: #fff;
+  background-color: #fb565a;
+}
+
+.submit-form-button:hover {
+  background: #e74246;
+}
+
+.submit-form-button:active {
+  background: #d7373b;
+  color: rgba(255, 255, 255, 0.3);
+}
